[package]
name = "report-apps"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3"
aes-gcm = "0.10"
rand = "0.8"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
base64 = "0.22"
urlencoding = "2.1"
